show-case spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -393,12 +393,17 @@ ul{
 }
 
 
-
 /* portfolio */
 .show-case{
-    margin-top: 200px;
+    margin-top: 250px;
     margin-bottom: 30px;
     transition: 0.5s ease-in-out;
+}
+@media (max-width: 991px) {
+    .show-case{
+        margin-top: 185px;
+        transition: 0.5s ease-in-out;
+    }   
 }
 @media (max-width: 575px) {
     .show-case{
@@ -406,12 +411,10 @@ ul{
         transition: 0.5s ease-in-out;
     }   
 }
-
-
 .projects{
     width: 100%;
     height: 240px;
-    border-radius: 15px;
+    border-radius: 6px;
 }
 .project-1{
     background: url(../img/project_1.png) no-repeat center center;
